--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,7 +32,7 @@ html, body {
     margin: 0 auto;
     padding: 0 26px;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     /* background: rgba(154,57,163,1);
     background: -moz-linear-gradient(-45deg, rgb(42, 126, 52) 0%, rgb(95, 125, 176) 100%);
     background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(154,57,163,1)), color-stop(100%, rgba(65,103,168,1)));
@@ -193,5 +193,17 @@ html, body {
 
 .black {
     color: #333 !important
+}
+
+.bg-white {
+    background: #fff !important;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+
+.p-1 {
+    padding: 1rem;
 }
 
